fix: re-apply lost changes and fix MissionServiceImpl constructor error