@@ -12,6 +12,7 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -21,21 +22,25 @@ public class VehicleServiceImpl implements VehicleService {
     private final VehicleTypeRepository vehicleTypeRepository;
 
     @Override
+    @SuppressWarnings("null")
     public VehicleResponse createVehicle(VehicleRequest request) {
         if (request.getVehicleTypeId() == null) {
             throw new BadRequestException("Vehicle type ID must not be null");
         }
         VehicleType vehicleType = vehicleTypeRepository.findById(request.getVehicleTypeId())
-                .orElseThrow(() -> new ResourceNotFoundException("Vehicle type not found with id: " + request.getVehicleTypeId()));
+                .orElseThrow(() -> new ResourceNotFoundException(
+                        "Vehicle type not found with id: " + request.getVehicleTypeId()));
 
         Vehicle vehicle = new Vehicle();
         // Depot handling can be added later when depot management is implemented
         vehicle.setDepot(null);
+        vehicle.setType(request.getType());
         vehicle.setVehicleType(vehicleType);
         vehicle.setModel(request.getModel());
         vehicle.setLicensePlate(request.getLicensePlate());
         vehicle.setCapacityPerson(request.getCapacityPerson());
         vehicle.setStatus(request.getStatus());
+        vehicle.setIsActive(true);
 
         Vehicle saved = vehicleRepository.save(vehicle);
         return mapToResponse(saved);
@@ -46,14 +51,20 @@ public class VehicleServiceImpl implements VehicleService {
     public VehicleResponse getVehicleById(Integer id) {
         Vehicle vehicle = vehicleRepository.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException("Vehicle not found with id: " + id));
+
+        if (!Boolean.TRUE.equals(vehicle.getIsActive())) {
+            throw new ResourceNotFoundException("Vehicle not found with id: " + id);
+        }
+
         return mapToResponse(vehicle);
     }
 
     @Override
     public List<VehicleResponse> getAllVehicles() {
         return vehicleRepository.findAll().stream()
+                .filter(v -> Boolean.TRUE.equals(v.getIsActive()))
                 .map(this::mapToResponse)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
@@ -62,14 +73,20 @@ public class VehicleServiceImpl implements VehicleService {
         Vehicle vehicle = vehicleRepository.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException("Vehicle not found with id: " + id));
 
+        if (!Boolean.TRUE.equals(vehicle.getIsActive())) {
+            throw new ResourceNotFoundException("Vehicle not found with id: " + id);
+        }
+
         // Business rule: if vehicle is IN_USE, core properties cannot be modified
         if (vehicle.getStatus() == Vehicle.VehicleStatus.IN_USE) {
             throw new BadRequestException("Vehicle is currently IN_USE and cannot be modified");
         }
 
         VehicleType vehicleType = vehicleTypeRepository.findById(request.getVehicleTypeId())
-                .orElseThrow(() -> new ResourceNotFoundException("Vehicle type not found with id: " + request.getVehicleTypeId()));
+                .orElseThrow(() -> new ResourceNotFoundException(
+                        "Vehicle type not found with id: " + request.getVehicleTypeId()));
 
+        vehicle.setType(request.getType());
         vehicle.setVehicleType(vehicleType);
         vehicle.setModel(request.getModel());
         vehicle.setLicensePlate(request.getLicensePlate());
@@ -91,7 +108,9 @@ public class VehicleServiceImpl implements VehicleService {
             throw new BadRequestException("Vehicle is currently IN_USE and cannot be deleted");
         }
 
-        vehicleRepository.delete(vehicle);
+        // Soft delete: set isActive to false instead of deleting from DB
+        vehicle.setIsActive(false);
+        vehicleRepository.save(vehicle);
     }
 
     @Override
@@ -99,6 +118,10 @@ public class VehicleServiceImpl implements VehicleService {
     public VehicleResponse updateStatus(Integer id, Vehicle.VehicleStatus newStatus) {
         Vehicle vehicle = vehicleRepository.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException("Vehicle not found with id: " + id));
+
+        if (!Boolean.TRUE.equals(vehicle.getIsActive())) {
+            throw new ResourceNotFoundException("Vehicle not found with id: " + id);
+        }
 
         vehicle.setStatus(newStatus);
         Vehicle updated = vehicleRepository.save(vehicle);
@@ -108,8 +131,9 @@ public class VehicleServiceImpl implements VehicleService {
     @Override
     public List<VehicleResponse> getVehiclesByStatus(Vehicle.VehicleStatus status) {
         return vehicleRepository.findByStatus(status).stream()
+                .filter(v -> Boolean.TRUE.equals(v.getIsActive()))
                 .map(this::mapToResponse)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
@@ -120,11 +144,11 @@ public class VehicleServiceImpl implements VehicleService {
     private VehicleResponse mapToResponse(Vehicle vehicle) {
         Integer depotId = vehicle.getDepot() != null ? vehicle.getDepot().getDepotId() : null;
         Integer vehicleTypeId = vehicle.getVehicleType() != null ? vehicle.getVehicleType().getId() : null;
-        String typeName = vehicle.getVehicleType() != null ? vehicle.getVehicleType().getName() : null;
 
         return new VehicleResponse(
                 vehicle.getVehicleId(),
                 depotId,
+                vehicle.getType(),
                 vehicleTypeId,
                 vehicle.getModel(),
                 vehicle.getLicensePlate(),
